--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "parse-server-gcloud-pubsub",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "google cloud pub/sub adapter for parse-server",
   "main": "lib/index.js",
+  "engines": {
+    "node" : ">=6"
+  },
   "files": [
     "lib/"
   ],
-  "scripts": {
-    "build": "./node_modules/.bin/babel src/ -d lib/",
-    "test": "TESTING=1 babel-node ./node_modules/.bin/isparta cover --root src/ ./node_modules/jasmine/bin/jasmine.js",
-    "prepublish": "npm run build"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/parse-server-modules/parse-server-gcloud-pubsub.git"
@@ -20,21 +19,12 @@
     "parse",
     "gcloud"
   ],
-  "author": "Parse",
+  "author": "Florent Vilmart",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/parse-server-modules/parse-server-gcloud-pubsub/issues"
   },
   "homepage": "https://github.com/parse-server-modules/parse-server-gcloud-pubsub#readme",
-  "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "codecov": "^1.0.1",
-    "isparta": "^4.0.0",
-    "jasmine": "^2.4.1"
-  },
   "dependencies": {
     "@google-cloud/pubsub": "^0.5.0",
     "uuid": "^2.0.3"
